@@ -1286,11 +1286,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\gumps\CombatOptions_gump.cc"
+					RelativePath="..\gumps\MiscOptions_gump.cc"
 					>
 				</File>
 				<File
-					RelativePath="..\gumps\CombatOptions_gump.h"
+					RelativePath="..\gumps\MiscOptions_gump.h"
 					>
 				</File>
 				<File
