@@ -1,4 +1,8 @@
 2011-01-16 Malignant Manor <malignantmanor@users.sourceforge.net>
+	* Renamed CombatOptionsGump.* to MiscOptionsGump.*
+	* Updated project files for this and newvideooptions.shp
+
+2011-01-16 Malignant Manor <malignantmanor@users.sourceforge.net>
 	* exult.cc: Move cfg options so they don't get needlessly read
 		during map build. Move config->write_back() to before
 		initializing the Game_window. Use USE_OLD_VIDEO_OPTIONS_GUMP
